--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,17 +2,16 @@ backend:
   name: github
   repo: aaryanrsh/drawmeet-landing
   branch: main
-  auth_endpoint: auth
-  client_id: your_github_oauth_client_id # You'll get this from GitHub OAuth App
   base_url: https://api.github.com
+  auth_endpoint: auth
   site_domain: drawmeet.com
+
+publish_mode: editorial_workflow
 
 # Media files will be stored in the repo under blog/images
 media_folder: "blog/images"
 # The src attribute for uploaded media will begin with /blog/images
 public_folder: "/blog/images"
-
-local_backend: true # Enable local backend for development
 
 collections:
   - name: "blog"
