--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,7 +3,8 @@ backend:
   repo: aaryanrsh/drawmeet-landing
   branch: main
   base_url: https://api.github.com
-  auth_endpoint: auth
+  auth_endpoint: /callback
+  client_id: Ov23lioPeYMQRoCrfWvC
   site_domain: drawmeet.com
 
 publish_mode: editorial_workflow
