--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,7 +3,8 @@ backend:
   repo: aaryanrsh/drawmeet-landing
   branch: main
   base_url: https://api.github.com
-  auth_endpoint: /callback
+  auth_endpoint: /login/oauth/authorize
+  token_endpoint: /login/oauth/access_token
   client_id: Ov23lioPeYMQRoCrfWvC
   site_domain: drawmeet.com
 
@@ -13,6 +14,11 @@ publish_mode: editorial_workflow
 media_folder: "blog/images"
 # The src attribute for uploaded media will begin with /blog/images
 public_folder: "/blog/images"
+
+# Add proper headers for GitHub API
+headers:
+  - "Accept: application/vnd.github+json"
+  - "X-GitHub-Api-Version: 2022-11-28"
 
 collections:
   - name: "blog"
