--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,11 +2,11 @@ backend:
   name: github
   repo: aaryanrsh/drawmeet-landing
   branch: main
-  base_url: https://api.github.com
-  auth_endpoint: /login/oauth/authorize
-  token_endpoint: /login/oauth/access_token
+  base_url: https://github.com
+  auth_endpoint: login/oauth/authorize
+  token_endpoint: login/oauth/access_token
   client_id: Ov23lioPeYMQRoCrfWvC
-  site_domain: drawmeet.com
+  site_domain: www.drawmeet.com
 
 publish_mode: editorial_workflow
 
